# djohodo

./: .env.example  .gitignore  README.md  main.py  portfolio.example.json  pyproject.toml
.github/workflows/: daily-watch.yml
analyst/: README.md  __init__.py
digests/: 2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md
docs/: cron-schedule.md
telegram-trigger/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
telegram-trigger/src/: env.d.ts  index.ts
watcher/: __init__.py  agent.py  delivery.py  portfolio.py  prompt.py  render.py  resolver.py  snapshot.py
